fix: add workspaces for future deps, document git install
- Add workspaces to root package.json so npm install at repo root
  installs subpackage dependencies (future-proofing)
- Add git install section to README with pi install and pi -e examples

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "description": "Extensions for pi, the AI coding agent",
+  "workspaces": [
+    "packages/*"
+  ],
   "keywords": [
     "pi-package"
   ],
