feat: add ancestor discovery extension
- include default config auto-write on first run
- add tests and docs for config behavior
- satisfy lint and formatting checks

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "./packages/pi-synthetic-provider/extensions/index.ts",
       "./packages/pi-antigravity-image-gen/extensions/index.ts",
       "./packages/pi-exa-mcp/extensions/index.ts",
-      "./packages/pi-firecrawl-mcp/extensions/index.ts"
+      "./packages/pi-firecrawl-mcp/extensions/index.ts",
+      "./packages/pi-ancestor-discovery/extensions/index.ts"
     ]
   },
   "devDependencies": {
